# openbabel-wheel

./: .gitignore  .gitmodules  CMakeLists.txt  MANIFEST.in  README.md  pyproject.toml  setup.py  vcpkg.json
.github/workflows/: build.yaml
openbabel/: __init__.py
tests/: test_import.py
vcpkg/: vcpkg.json
